Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,11 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 
-# REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5476285073:AAHXzOA-Mbs1FTSst2z3RxRe6J3q0__CA7Y"                              # Require restart after changing it while bot running
+OWNER_ID = "5379320931"                               # Require restart after changing it while bot running
+TELEGRAM_API = "10180188"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "3ccd9602ecfed4a728c76c8e47e8ced2"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
